# embeddings

./: .env-example.toml  .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
embeddings/: __init__.py  _error.py  _types.py  server.py  template.py
embeddings/backend/: __init__.py  _base.py  _gensim.py  _instructor_embedding.py  _llama_cpp.py  _sentence_transformer.py
embeddings/config/: __init__.py
script/: unittest.sh
tests/: test_api_with_openai.py  test_backend.py  test_template.py
